nav gap fixes

--- a/public/CSS/styles5.css
+++ b/public/CSS/styles5.css
@@ -62,7 +62,7 @@ nav {
   font-size: 19px;
   padding-right: 54px;
   margin-top: 45px;
-  gap: 1.5em;
+  gap: 1.em;
 }
 
 .nav-link {
